# grid

./: .gitignore  LICENSE  README.md  pyproject.toml
GRID/: __init__.py  didp_converter.py  expressions.py  expressions_manager.py  features_managers.py  interface.py  objective_managers.py  structure_managers.py
docs/: Makefile  requirements.txt
docs/source/: api-reference.rst  conf.py  custom-features.rst  index.rst  modelling-elements.rst  native-features.rst  quickstart.rst
grid/: expressions.py  expressions_manager.py  interface.py  structure_managers.py
